favicon and other updates made

--- a/index.html
+++ b/index.html
@@ -2,7 +2,67 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/dates-doha.png" />
+    <!-- Favicon for Standard Browsers -->
+    <link rel="icon" href="/favicon-16x16.png" sizes="16x16" type="image/png" />
+
+    <link rel="icon" href="/favicon-32x32.png" sizes="32x32" type="image/png" />
+
+    <link rel="icon" href="/favicon-48x48.png" sizes="48x48" type="image/png" />
+
+    <link rel="icon" href="/favicon-96x96.png" sizes="96x96" type="image/png" />
+
+    <link
+      rel="icon"
+      href="/favicon-192x192.png"
+      sizes="192x192"
+      type="image/png"
+    />
+
+    <link
+      rel="icon"
+      href="/favicon-512x512.png"
+      sizes="512x512"
+      type="image/png"
+    />
+
+    <!-- Favicon for Apple Touch Devices -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-icon-180x180.png"
+    />
+
+    <!-- Tile Icons for Windows -->
+    <meta name="msapplication-TileImage" content="/dates-doha-144x144.png" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+
+    <!-- Manifest File for PWA -->
+    <link rel="manifest" href="/manifest.json" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Dates Doha Contracting WLL – Redefining Excellence in Contracting &
