--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
     <!-- Manifest File for PWA -->
     <link rel="manifest" href="/manifest.json" />
 
+    <meta property="og:title" content="Dates Doha Contracting WLL" />
+    <meta
+      property="og:description"
+      content="Redefining Excellence in Contracting & Trading"
+    />
+    <meta property="og:image" content="./public/Dates-Doha-Logo.png" />
+    <meta property="og:url" content="https://datesdoha.vercel.app" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dates Doha Contracting WLL" />
+    <meta
+      name="twitter:description"
+      content="Redefining Excellence in Contracting & Trading"
+    />
+    <meta name="twitter:image" content="./public/Dates-Doha-Logo.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Dates Doha Contracting WLL – Redefining Excellence in Contracting &
