--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       property="og:description"
       content="Redefining Excellence in Contracting & Trading"
     />
-    <meta property="og:image" content="./public/Dates-Doha-Logo.png" />
+    <meta property="og:image" content="/Dates-Doha-Logo.png" />
     <meta property="og:url" content="https://datesdoha.vercel.app" />
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -77,7 +77,7 @@
       name="twitter:description"
       content="Redefining Excellence in Contracting & Trading"
     />
-    <meta name="twitter:image" content="./public/Dates-Doha-Logo.png" />
+    <meta name="twitter:image" content="/Dates-Doha-Logo.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
