--- a/index.html
+++ b/index.html
@@ -1,60 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- Favicon for Standard Browsers -->
+
+<head>
+  <meta charset="UTF-8" />
+  <<!-- Favicon for Standard Browsers -->
     <link rel="icon" href="/favicon-16x16.png" sizes="16x16" type="image/png" />
-
     <link rel="icon" href="/favicon-32x32.png" sizes="32x32" type="image/png" />
-
     <link rel="icon" href="/favicon-48x48.png" sizes="48x48" type="image/png" />
-
     <link rel="icon" href="/favicon-96x96.png" sizes="96x96" type="image/png" />
+    <link rel="icon" href="/favicon-192x192.png" sizes="192x192" type="image/png" />
+    <link rel="icon" href="/favicon-512x512.png" sizes="512x512" type="image/png" />
 
-    <link
-      rel="icon"
-      href="/favicon-192x192.png"
-      sizes="192x192"
-      type="image/png"
-    />
-
-    <link
-      rel="icon"
-      href="/favicon-512x512.png"
-      sizes="512x512"
-      type="image/png"
-    />
 
     <!-- Favicon for Apple Touch Devices -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="/apple-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="/apple-icon-120x120.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="/apple-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="/apple-icon-152x152.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/apple-icon-180x180.png"
-    />
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" />
 
     <!-- Tile Icons for Windows -->
     <meta name="msapplication-TileImage" content="/dates-doha-144x144.png" />
@@ -64,19 +31,13 @@
     <link rel="manifest" href="/manifest.json" />
 
     <meta property="og:title" content="Dates Doha Contracting WLL" />
-    <meta
-      property="og:description"
-      content="Redefining Excellence in Contracting & Trading"
-    />
+    <meta property="og:description" content="Redefining Excellence in Contracting & Trading" />
     <meta property="og:image" content="/Dates-Doha-Logo.png" />
     <meta property="og:url" content="https://datesdoha.vercel.app" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Dates Doha Contracting WLL" />
-    <meta
-      name="twitter:description"
-      content="Redefining Excellence in Contracting & Trading"
-    />
+    <meta name="twitter:description" content="Redefining Excellence in Contracting & Trading" />
     <meta name="twitter:image" content="/Dates-Doha-Logo.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -87,8 +48,7 @@
     <!-- public/index.html -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Lato:wght@300;400;700&family=Merriweather:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
 
     <script>
       // Function to create a scrolling effect
@@ -104,9 +64,11 @@
 
       setInterval(scrollTitle, 200); // Adjust the speed here (200ms)
     </script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
